--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,9 +1,23 @@
 global:
-  scrape_interval: 30s
-
-
-
+  scrape_interval: 5s
 scrape_configs:
-  - job_name: prometheus
-    static_configs:
-      - targets: ["localhost:9090"]
+- job_name: prometheus
+  honor_timestamps: true
+  scrape_interval: 15s
+  scrape_timeout: 10s
+  metrics_path: /metrics
+  scheme: http
+  follow_redirects: true
+  static_configs:
+  - targets:
+    - localhost:9090  
+- job_name: aula
+  honor_timestamps: true
+  scrape_interval: 15s
+  scrape_timeout: 10s
+  metrics_path: /metrics
+  scheme: http
+  follow_redirects: true
+  static_configs:
+  - targets:
+    - 192.168.0.26:3000  
