--- a/docker/prometheus-data/prometheus.yml
+++ b/docker/prometheus-data/prometheus.yml
@@ -11,7 +11,7 @@ scrape_configs:
   static_configs:
   - targets:
     - localhost:9090  
-- job_name: python
+- job_name: aula
   honor_timestamps: true
   scrape_interval: 15s
   scrape_timeout: 10s
@@ -20,4 +20,4 @@ scrape_configs:
   follow_redirects: true
   static_configs:
   - targets:
-    - 192.168.0.26:3030  
+    - 192.168.0.26:5000
